--- a/css/styles.css
+++ b/css/styles.css
@@ -816,3 +816,153 @@ input {
 .modal-btn-submit:focus {
   background-color: #404bbf;
 }
+
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 320px;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+  .hero {
+    padding: 72px 0;
+  }
+  .hero-header {
+    font-size: 36px;
+    line-height: 1.11;
+    max-width: 216px;
+    margin: 0 auto 72px;
+  }
+  .features {
+    padding: 96px 0;
+  }
+  .features-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+  .features-item {
+    width: 100%;
+  }
+  .icon-container {
+    display: none;
+  }
+  .features-header {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+  }
+  .features-description {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+  .team {
+    padding: 96px 0;
+  }
+  .team-list {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+  .team-item {
+    max-width: 100%;
+  }
+  .portfolio {
+    padding: 96px 0;
+  }
+  .portfolio-list {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+  }
+  .portfolio-item {
+    width: 100%;
+    box-shadow:
+      0 2px 1px 0 rgba(46, 47, 66, 0.08),
+      0 1px 1px 0 rgba(46, 47, 66, 0.16),
+      0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  }
+  .page-footer {
+    padding: 96px;
+  }
+  .page-footer .container {
+    display: flex;
+    flex-direction: column;
+    gap: 72px;
+  }
+
+  .subscribe-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 16px;
+    margin: 0 auto;
+  }
+  .header-logo {
+    margin-right: 120px;
+  }
+  .contacts-list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 12px;
+  }
+  .contacts-link {
+    padding: 0;
+  }
+  .hero {
+    padding: 112px 0;
+    margin: 0 auto;
+  }
+  .features {
+    padding: 96px 0;
+  }
+  .features-list {
+    flex-wrap: wrap;
+    gap: 72px 24px;
+  }
+  .features-item {
+    max-width: calc((100% - 24px) / 2);
+  }
+  .icon-container {
+    display: none;
+  }
+  .features-header {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+  }
+  .features-description {
+    font-weight: 500;
+  }
+  .team {
+    padding: 96px 0;
+  }
+  .team-list {
+    flex-wrap: wrap;
+    gap: 64px 24px;
+    align-content: center;
+  }
+  .team-item {
+    max-width: calc((100% - 48px) / 2);
+  }
+  .portfolio {
+    padding: 96px 0;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    width: 100%;
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+}
